Closed
Bug 1921719
Opened 1 year ago
Closed 1 year ago
[Linux] Crash at nsGNOMEShellHistorySearchResult::HandleSearchResultReply()
Categories
(Firefox :: Shell Integration, defect, P3)
Firefox
Shell Integration
Tracking
()
RESOLVED
FIXED
133 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox131 | --- | unaffected |
| firefox132 | --- | fixed |
| firefox133 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Crash at nsGNOMEShellHistorySearchResult::HandleSearchResultReply(), after Bug 1634961 mHistResultContainer can be nullptr.
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Updated•1 year ago
|
Severity: -- → S3
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/98d6bd33c792
[Linux] Gnome shell search - quit early if we don't have any search results r=emilio
| Assignee | ||
Updated•1 year ago
|
status-firefox132:
--- → affected
status-firefox133:
--- → affected
| Assignee | ||
Comment 3•1 year ago
|
||
We should uplift it to beta as it crashes right after Firefox start if GS is enabled.
Flags: needinfo?(stransky)
Comment 4•1 year ago
|
||
Set release status flags based on info from the regressing bug 1634961
status-firefox131:
--- → unaffected
status-firefox-esr128:
--- → unaffected
Comment 5•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Comment 6•1 year ago
|
||
Go ahead and nominate for Beta when you get a chance.
| Assignee | ||
Comment 7•1 year ago
|
||
Comment on attachment 9428027 [details]
Bug 1921719 [Linux] Gnome shell search - quit early if we don't have any search results r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Firefox crashes right after start with Gnome shell search provider enabled.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Added null pointer check.
- String changes made/needed:
- Is Android affected?: No
Flags: needinfo?(stransky)
Attachment #9428027 -
Flags: approval-mozilla-beta?
Comment 8•1 year ago
|
||
Comment on attachment 9428027 [details]
Bug 1921719 [Linux] Gnome shell search - quit early if we don't have any search results r?emilio
Approved for 132.0b5.
Attachment #9428027 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•1 year ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•