Bug 1921719 [Linux] Gnome shell search - quit early if we don't have any search results r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D224089