browser/components/shell/nsGNOMEShellSearchProvider.cpp
@@ -423,6 +423,7 @@ static void DBusGetIDKeyForURI(int aIndex, bool aIsOpen, nsAutoCString& aUri,
 // Send (as) rearch result reply
 void nsGNOMEShellHistorySearchResult::HandleSearchResultReply() {
   MOZ_ASSERT(mReply);
+  MOZ_ASSERT(mHistResultContainer);
 
   GVariantBuilder b;
   g_variant_builder_init(&b, G_VARIANT_TYPE("as"));
@@ -486,9 +487,11 @@ void nsGNOMEShellHistorySearchResult::ReceiveSearchResultContainer(
   // Propagate search results to nsGNOMEShellSearchProvider.
   // SetSearchResult() checks this is up-to-date search (our time stamp matches
   // latest requested search timestamp).
-  if (mSearchProvider->SetSearchResult(this)) {
-    mHistResultContainer = aHistResultContainer;
+  if (!mSearchProvider->SetSearchResult(this)) {
+    return;
   }
+
+  mHistResultContainer = aHistResultContainer;
 
   // Getting the currently open tabs to mark them accordingly
   nsresult rv;
